--- a/scss/boilerplate.scss
+++ b/scss/boilerplate.scss
@@ -12,8 +12,8 @@
 @import 'global/grid';
 @import 'global/flex';
 
-/* Styles limited to boilerplate sheets */
-.boilerplate {
+/* Styles limited to break sheets */
+.break {
   @import 'components/forms';
   @import 'components/resource';
   @import 'components/items';
