--- a/scss/components/_items.scss
+++ b/scss/components/_items.scss
@@ -113,7 +113,7 @@
   }
 }
 
-/* Example style for Boilerplate (can be removed if not needed) */
+/* Example style for Break (can be removed if not needed) */
 .item-formula {
   flex: 0 0 200px;
   padding: 0 8px;
