--- a/templates/actor/actor-npc-sheet.hbs
+++ b/templates/actor/actor-npc-sheet.hbs
@@ -63,12 +63,12 @@
 
     {{!-- Owned Items Tab --}}
     <div class="tab items" data-group="primary" data-tab="items">
-       {{> "systems/break/templates/actor/parts/actor-items.html"}}
+       {{> "systems/break/templates/actor/parts/actor-items.hbs"}}
     </div>
 
     {{!-- Active Effects Tab --}}
     <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-      {{> "systems/break/templates/actor/parts/actor-effects.html"}}
+      {{> "systems/break/templates/actor/parts/actor-effects.hbs"}}
     </div>
 
   </section>
